--- a/SSF2.html
+++ b/SSF2.html
@@ -33,7 +33,7 @@
 
             container.appendChild(player);
 
-            player.load("https://raw.githubusercontent.com/VocalNutria9174/SSF2_Portable_Web/main/SSF2Portable.swf");
+            player.load("SSF2Portable.swf");
         });
     </script>
     
